# laboratory

./: LICENCE  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: tests.yaml
tests/: test_decorator.py  test_experiment.py
